<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <ImageButton
        android:id="@+id/filter_dialog_close_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/cancel_button"
        android:layout_gravity="end"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GetItCheapTextInputLayout"
        android:weightSum="1"
        android:background="@drawable/border_background"
        >
    <TextView
        style="@style/GetItCheapTextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:layout_weight="0.2"
        android:text="@string/category"
        android:padding="10dp"
        />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/category_filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rental_basis_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GetItCheapTextInputLayout"
        android:background="@drawable/border_background"
        android:weightSum="1"
        >
        <TextView
            style="@style/GetItCheapTextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:maxWidth="100dp"
            android:padding="10dp"
            android:text="@string/rental_basis"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/rental_basis_filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/GetItCheapTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        >
        <fragment
            android:id="@+id/location_filter_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/zip_code_filter_layout"
        style="@style/GetItCheapTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        app:textInputLayoutFocusedRectEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zip_code_filter_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_primary"
            app:textInputLayoutFocusedRectEnabled="true"
            android:inputType="number"
            android:maxLength="5"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_filters"
        android:layout_width="70dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_primary"
        android:text="@string/apply_filters"
        android:layout_weight="0.5"
        app:backgroundTint="@android:color/holo_green_dark"
        app:cornerRadius="10dp"
        android:layout_margin="25dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_all_filters"
        android:layout_width="70dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/font_primary"
        android:text="@string/clear_filters"
        android:layout_weight="0.5"
        app:backgroundTint="@color/primaryButton"
        app:cornerRadius="10dp"
        />
</LinearLayout>

</LinearLayout>